--- a/src/index.scss
+++ b/src/index.scss
@@ -7,7 +7,18 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-
 //IMPORTS
-@import 'blocks/formobiles.scss';
+@import 'blocks/Mobile.scss';
+@import 'blocks/Main.scss';
 
+//Loader
+@import 'blocks/loader-rainbow.scss';
+
+.navigation{
+  z-index: 2;
+  position: absolute;
+  top: 16vw;
+  width: 60vw;
+  height: 40vw;
+  background-color: aqua;
+}
