added boomerang funcs to trigger navigation-pannel

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,8 +17,8 @@ body {
 .navigation{
   z-index: 2;
   position: absolute;
-  top: 16vw;
   width: 60vw;
   height: 40vw;
   background-color: aqua;
+  border-radius: 5px;
 }
