--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,7 @@ body {
 @import 'blocks/Mobile.scss';
 @import 'blocks/Main.scss';
 @import 'blocks/Nav.scss';
+@import 'blocks/Lastscreen.scss';
 
 //Loader
 @import 'blocks/loader-rainbow.scss';
