--- a/src/blocks/Lastscreen.scss
+++ b/src/blocks/Lastscreen.scss
@@ -5,6 +5,7 @@
     justify-content: center;
     padding-top: 1vw;
     border-radius: 5px;
+    font-family: 'Pangolin';
     transition: opacity 0.5s linear;
     width: 60vw;
     height: 40vw;
